--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
+    <link rel="stylesheet" href="styles.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
+    <header>
+      <nav>
+        <div class="logo">Spotify</div>
+        <ul class="navbar">
+          <li><a href="#">Premium</a></li>
+          <li><a href="#">Discover</a></li>
+          <li><a href="#">Help</a></li>
+          <li><a href="#">Download</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="Backgroundimage">
+      <h1>>Music for everyone.</h1>
+
+    </section>
     Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
     right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
     Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
