--- a/index.html
+++ b/index.html
@@ -1,34 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Spotify Clone</title>
-    <link rel="stylesheet" href="styles.css">
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    <header>
-      <nav>
-        <div class="logo">Spotify</div>
-        <ul class="navbar">
-          <li><a href="#">Premium</a></li>
-          <li><a href="#">Discover</a></li>
-          <li><a href="#">Help</a></li>
-          <li><a href="#">Download</a></li>
-        </ul>
-      </nav>
-    </header>
-    <section class="Backgroundimage">
-      <h1>>Music for everyone.</h1>
 
-    </section>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Spotify Clone</title>
+  <link rel="stylesheet" href="styles.css">
+  <!-- don't forget to link your styles -->
+</head>
+
+<body>
+  <header>
+
+
+    <nav class="navbar"><span>LOGO SPOTIFY</span>
+
+      <ul class="navbar__links">
+        <li><a href="link__premium">Premium</a></li>
+        <li><a href="link__discover">Discover</a></li>
+        <li><a href="link__help">Help</a></li>
+        <li><a href="link__download">Download</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section class="Backgroundimage">
+    <h1>>Music for everyone.</h1>
+    <p>Spotify is now free on mobile, tablet, and computer.</p> <br>
+    <p>Listen to the right music, wherever you are.</p>
+  </section>
+  <section class="Whats-on-Spotify">
+    <h2>What’s on Spotify?</h2>
+    <div class="features">
+      <div class="feature"></div>
+      <h3>Millions of Songs</h3>
+      <p>There are millions of songs on Spotify</p>
+      <h3>HD Music</h3>
+      <p>Listen to music as if you were listening live</p>
+      <h3>Stream Everywhere</h3>
+      <p>Stream music on your smartphone, tablet or computer</p>
+    </div>
+  </section>
+  <section class="green-section">
+    <div class="green"></div>
+    <h3>Search</h3>
+    <p>It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play.</p>
+    <h3>Browse</h3>
+    <p>Browse Check out the latest charts, brand new releases and great playlists for right now.</p>
+    <h3>Discover</h3>
+    <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio</p>.
+  </section>
+
+</body>
+
 </html>
