add flex and edit navbar

--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Spotify Clone</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <!-- don't forget to link your styles -->
 </head>
 
 <body>
   <header>
-
-
     <nav class="navbar"><span>LOGO SPOTIFY</span>
 
       <ul class="navbar__links">
