--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Spotify Clone</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/lab-css-spotify-clone/styles/style.css">
   <!-- don't forget to link your styles -->
 </head>
 
