--- a/index.html
+++ b/index.html
@@ -6,47 +6,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Spotify Clone</title>
-  <link rel="stylesheet" href="/lab-css-spotify-clone/styles/style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <!-- don't forget to link your styles -->
 </head>
 
 <body>
+  <!-- Iteracioon 0: Anadir todo el HTML inicial-->
   <header>
-    <nav class="navbar"><span>LOGO SPOTIFY</span>
-
+    <nav class="navbar">
+      <img class="navbar__logo" src="./images/spotify-logo.png" alt="spotify logo">
       <ul class="navbar__links">
-        <li><a href="link__premium">Premium</a></li>
-        <li><a href="link__discover">Discover</a></li>
-        <li><a href="link__help">Help</a></li>
-        <li><a href="link__download">Download</a></li>
+        <li><a href="#">Premium</a></li>
+        <li><a href="#">Discover</a></li>
+        <li><a href="#">Help</a></li>
+        <li><a href="#">Download</a></li>
       </ul>
     </nav>
   </header>
-  <section class="Backgroundimage">
-    <h1>>Music for everyone.</h1>
-    <p>Spotify is now free on mobile, tablet, and computer.</p> <br>
-    <p>Listen to the right music, wherever you are.</p>
-  </section>
-  <section class="Whats-on-Spotify">
-    <h2>What’s on Spotify?</h2>
-    <div class="features">
-      <div class="feature"></div>
-      <h3>Millions of Songs</h3>
-      <p>There are millions of songs on Spotify</p>
-      <h3>HD Music</h3>
-      <p>Listen to music as if you were listening live</p>
-      <h3>Stream Everywhere</h3>
-      <p>Stream music on your smartphone, tablet or computer</p>
+
+  <!-- Uso metodologia BEM para nombrar estas clases -->
+  <section class="hero">
+    <div>
+      <h1>Music for everyone.</h1>
+      <p>Spotify is now free on mobile, tablet, and computer.</p> <br>
+      <p>Listen to the right music, wherever you are.</p>
     </div>
   </section>
-  <section class="green-section">
-    <div class="green"></div>
-    <h3>Search</h3>
-    <p>It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play.</p>
-    <h3>Browse</h3>
-    <p>Browse Check out the latest charts, brand new releases and great playlists for right now.</p>
-    <h3>Discover</h3>
-    <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio</p>.
+  <section>
+    <h2>What’s on Spotify?</h2>
+    <article>
+      <h3>Millions of Songs</h3>
+      <p>There are millions of songs on Spotify</p>
+    </article>
+    <article>
+      <h3>HD Music</h3>
+      <p>Listen to music as if you were listening live</p>
+    </article>
+    <article>
+      <h3>Stream Everywhere</h3>
+      <p>Stream music on your smartphone, tablet or computer</p>
+    </article>
+  </section>
+
+  <section>
+    <h2>It's as yeezy as Kanye West.</h2>
+    <article>
+      <h3>Search</h3>
+      <p>It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play.</p>
+      <h3>Browse</h3>
+      <p>Browse Check out the latest charts, brand new releases and great playlists for right now.</p>
+      <h3>Discover</h3>
+      <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio</p>.
+    </article>
   </section>
 
 </body>
