add spotify title CSS

--- a/index.html
+++ b/index.html
@@ -32,20 +32,23 @@
       <p>Listen to the right music, wherever you are.</p>
     </div>
   </section>
-  <section>
-    <h2>What’s on Spotify?</h2>
+  <section class="spotify">
+    <h2 class="spotify__title">What’s on Spotify?</h2>
     <article>
-      <h3>Millions of Songs</h3>
+      <div class="features">
+      <article class="features__songs">
+        <h3>Millions of Songs</h3>
       <p>There are millions of songs on Spotify</p>
     </article>
-    <article>
+    <article class="features__music">
       <h3>HD Music</h3>
       <p>Listen to music as if you were listening live</p>
     </article>
-    <article>
+    <article class="features__stream">
       <h3>Stream Everywhere</h3>
       <p>Stream music on your smartphone, tablet or computer</p>
     </article>
+    </div>
   </section>
 
   <section>
