actions to CSS, actions, actions__title

--- a/index.html
+++ b/index.html
@@ -32,34 +32,44 @@
       <p>Listen to the right music, wherever you are.</p>
     </div>
   </section>
+
+  <!-- what-s on spotify-->
+
   <section class="spotify">
     <h2 class="spotify__title">What’s on Spotify?</h2>
     <article>
       <div class="features">
-      <article class="features__songs">
-        <h3>Millions of Songs</h3>
-      <p>There are millions of songs on Spotify</p>
-    </article>
-    <article class="features__music">
-      <h3>HD Music</h3>
-      <p>Listen to music as if you were listening live</p>
-    </article>
-    <article class="features__stream">
-      <h3>Stream Everywhere</h3>
-      <p>Stream music on your smartphone, tablet or computer</p>
-    </article>
-    </div>
+        <article class="features__songs">
+          <h3>Millions of Songs</h3>
+          <p>There are millions of songs on Spotify</p>
+        </article>
+        <article class="features__music">
+          <h3>HD Music</h3>
+          <p>Listen to music as if you were listening live</p>
+        </article>
+        <article class="features__stream">
+          <h3>Stream Everywhere</h3>
+          <p>Stream music on your smartphone, tablet or computer</p>
+        </article>
+      </div>
   </section>
 
-  <section>
-    <h2>It's as yeezy as Kanye West.</h2>
-    <article>
-      <h3>Search</h3>
-      <p>It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play.</p>
-      <h3>Browse</h3>
-      <p>Browse Check out the latest charts, brand new releases and great playlists for right now.</p>
-      <h3>Discover</h3>
-      <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio</p>.
+  <!-- It-s a yeezy as Kanye West-->
+  <section class="actions">
+    <h2 class="actions__title">It's as yeezy as Kanye West.</h2>
+      <article class="actions__search">
+        <h3>Search</h3>
+        <p>It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play.</p>
+      </article>
+      <article class="actions__browse">
+        <h3>Browse</h3>
+        <p>Browse Check out the latest charts, brand new releases and great playlists for right now.</p>
+      </article>
+      <article class="actions__discover">
+        <h3>Discover</h3>
+        <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio</p>.
+      </article>
+    </div>
     </article>
   </section>
 
